prio desc filters

--- a/index.html
+++ b/index.html
@@ -14,11 +14,35 @@
 
   </div>
   <div class="main-container" id="main-container">
+
     <div class="header">Header</div>
+
     <div class="sort-container" id="sort-container"></div>
     <div class="toggle-container">
-      <span class="span-checkbox">Show deleted</span>
-      <input type="checkbox" id="switch" /><label for="switch" class="label-"></label>
+      
+      <!-- <div class="desc-container">
+        <img class = 'search-img' src="img/search.png">
+        <input type="text" class="desc-input">
+      </div> -->
+
+      <!-- <div class="priority-container">
+        <span class="priority-span">priority</span>
+        <div class="common-div">
+
+          <div id ='priorityButton' class="priority-button">all</div>
+          <div id="commonDivForSelect" class="common-div-for-select-none">
+            <div class="select">all</div>
+            <div class="select">low</div>
+            <div class="select">middle</div>
+            <div class="select">height</div>
+          </div>
+        </div>
+      </div> -->
+      
+      <div class="deleted-toggle">
+        <span class="span-checkbox">Show deleted</span>
+        <input type="checkbox" id="switch" /><label for="switch" class="label-"></label>  
+      </div>
     </div>
   </div>
   
