styles for modaldetails

--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
 </head>
 <body id="body">
   <div class="main-modal-container" id="mainModalContainer">
+  </div>
+
+  <div class="modal-detail-container">
+    <div class="id-avatar-container">
+      <div class="modal-detail-id">ID:174</div>
+      <div class="modal-avatar-container">
+        <img class="avatar-detail-modal" src="img/boy3.png">
+        <input type="text">
+      </div>
+    </div>
+
+    <div class="description-modal">
+      <span class="span-description-modal">Description</span>
+      <textarea></textarea>
+    </div>
+
+    <div class="dropdawns-container">
+      <input>
+      <input>
+    </div>
+
+    <div class="modal-detail-button-container">
+      <div class="button-cancel">Close</div>
+      <div class="button-save">Save</div> 
+    </div>
 
   </div>
   <div class="main-container" id="main-container">
