task detail modal

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <div class="main-modal-container" id="mainModalContainer">
   </div>
 
-  <div class="modal-detail-container">
+  <!-- <div class="modal-detail-container">
     <div class="id-avatar-container">
       <div class="modal-detail-id">ID:174</div>
       <div class="modal-avatar-container">
         <img class="avatar-detail-modal" src="img/boy3.png">
         <input type="text">
+  
       </div>
     </div>
 
@@ -37,13 +38,15 @@
       <div class="button-save">Save</div> 
     </div>
 
-  </div>
+  </div> -->
+
   <div class="main-container" id="main-container">
 
     <div class="header">Header</div>
 
     <div class="sort-container" id="sort-container"></div>
     <div class="toggle-container">
+      
       
       <!-- <div class="desc-container">
         <img class = 'search-img' src="img/search.png">
