--- a/index.html
+++ b/index.html
@@ -4,31 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 </head>
 <body id="body">
-  <div class="main-modal-container" id="mainModalContainer">
-  </div>
-  <div class="main-container" id="main-container">
-
-    <!-- <div class="header">
-      <div class ='logo'>ToDor</div>
-      <div class ='container-for-login'>
-        <div> log in</div>
+  <div class= "main-modal-container" id= "mainModalContainer"></div>
+  <div class= "main-container" id= "main-container">
+    <div class= "sort-container" id="sort-container"></div>
+    <div class= "toggle-container">
+      <div class= "deleted-toggle">
+        <span class= "span-checkbox">Show deleted</span>
+        <input type= "checkbox" id= "switch">
+        <label for= "switch" class= "label"></label>  
       </div>
-    </div> -->
-    <div class="sort-container" id="sort-container"></div>
-    <div class="toggle-container">
-    <div class="deleted-toggle">
-      <span class="span-checkbox">Show deleted</span>
-      <input type="checkbox" id="switch" /><label for="switch" class="label-"></label>  
-    </div>
     </div>
   </div>
-
   <script type="module" src="index.js"></script>
 </body>
 </html>
