--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="./style.css" rel="stylesheet">
 </head>
 <body id="body">
   <div class= "main-modal-container" id= "mainModalContainer"></div>
