--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap" rel="stylesheet">
-  <link href="./style.css" rel="stylesheet">
-</head>
-<body id="body">
-  <div class= "main-modal-container" id= "mainModalContainer"></div>
-  <div class= "main-container" id= "main-container">
-    <div class= "sort-container" id="sort-container"></div>
-    <div class= "toggle-container">
-      <div class= "deleted-toggle">
-        <span class= "span-checkbox">Show deleted</span>
-        <input type= "checkbox" id= "switch">
-        <label for= "switch" class= "label"></label>  
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToDor</title>
+    <link rel="shortcut icon" href="img/mainIcon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
+  </head>
+  <body id="body">
+    <div class= "main-modal-container" id= "mainModalContainer"></div>
+    <div class= "main-container" id= "main-container">
+      <div class= "sort-container" id="sort-container"></div>
+      <div class= "toggle-container">
+        <div class= "deleted-toggle">
+          <span class= "span-checkbox">Show deleted</span>
+          <input type= "checkbox" id= "switch">
+          <label for= "switch" class= "label"></label>  
+        </div>
       </div>
     </div>
-  </div>
-  <script type="module" src="index.js"></script>
-</body>
+    <script type="module" src="index.js"></script>
+  </body>
 </html>
